--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,6 @@
     <name>projectx-lib-javafx OSGi Bundle</name>
     <inceptionYear>2012</inceptionYear>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 <!-- Not inherited!?? -->
     <prerequisites>
         <maven>${maven.version}</maven>
@@ -29,13 +26,8 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.6</version>
+                <version>2.3.7</version>
                 <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Bundle-Activator>org.projectx.lib.javafx.Activator</Bundle-Activator>
-                    </instructions>
-                </configuration>
             </plugin>
 <!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -85,7 +77,7 @@
         <dependency>
             <groupId>javafx</groupId>
             <artifactId>jfxrt</artifactId>
-            <version>2.0</version>
+            <version>2.1.0-beta</version>
             <type>jar</type>
             <scope>system</scope>
             <systemPath>${env.JAVAFX_HOME}/rt/lib/jfxrt.jar</systemPath>
