--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.projectx</groupId>
-        <artifactId>projectx-oss-parent</artifactId>
+        <groupId>org.projectx.lib</groupId>
+        <artifactId>projectx-lib-parent</artifactId>
         <version>0.1-SNAPSHOT</version>
+        <relativePath>projectx-lib-parent</relativePath>
     </parent>
-    <groupId>org.projectx.lib</groupId>
-    <artifactId>projectx-lib-javafx</artifactId>
-    <version>0.1-SNAPSHOT</version>
-    <packaging>bundle</packaging>
+    <artifactId>projectx-lib-all</artifactId>
+    <packaging>pom</packaging>
 
-    <name>projectx-lib-javafx OSGi Bundle</name>
+    <name>ProjectX - Utility Library - All</name>
     <inceptionYear>2012</inceptionYear>
 
 <!-- Not inherited!?? -->
@@ -21,239 +20,8 @@
         <maven>${maven.version}</maven>
     </prerequisites>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
-                <extensions>true</extensions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.0</version>
-                <configuration>
-                    <reportPlugins> 
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-project-info-reports-plugin</artifactId>
-                            <version></version>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <version>2.8.1</version>
-                            <configuration>
-                                <detectLinks>true</detectLinks>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>taglist-maven-plugin</artifactId>
-                            <version>2.4</version>
-                        </plugin>
-                    </reportPlugins>
-                </configuration>
-            </plugin>
-<!--            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.3.1</version>
-                <executions>
-                    <execution>
-                        <id>install-threeten-ri</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <configuration>
-                            <file>lib/jsr-310-ri-0.6.3.jar</file>
-                            <groupId>javax.time</groupId>
-                            <artifactId>jsr-310-ri</artifactId>
-                            <version>0.6.3</version>
-                            <packaging>jar</packaging>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>install-threeten-TZDB-all</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <configuration>
-                            <file>lib/jsr-310-TZDB-all-0.6.3.jar</file>
-                            <groupId>javax.time</groupId>
-                            <artifactId>jsr-310-TZDB-all</artifactId>
-                            <version>0.6.3</version>
-                            <packaging>jar</packaging>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>-->
-        </plugins>
-    </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <version>1.4.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javafx</groupId>
-            <artifactId>jfxrt</artifactId>
-            <version>2.1.0-beta</version>
-            <type>jar</type>
-            <scope>system</scope>
-            <systemPath>${env.JAVAFX_HOME}/rt/lib/jfxrt.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>org.softsmithy.lib</groupId>
-            <artifactId>softsmithy-lib-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.time</groupId>
-            <artifactId>jsr-310-ri</artifactId>
-            <version>0.6.3</version>
-        </dependency>
-        <dependency>                            
-            <groupId>javax.time</groupId>
-            <artifactId>jsr-310-TZDB-all</artifactId>
-            <version>0.6.3</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-    
-    <profiles>
-        <profile>
-            <id>build-for-felix</id>
-            <dependencies>
-                <dependency>
-                    <groupId>org.apache.felix</groupId>
-                    <artifactId>org.apache.felix.main</artifactId>
-                    <version>4.0.2</version>
-                    <scope>provided</scope>
-                </dependency>
-                <!-- To include a shell:
-                <dependency>
-                    <groupId>org.apache.felix</groupId>
-                    <artifactId>org.apache.felix.gogo.shell</artifactId>
-                    <version>0.6.1</version>
-                </dependency>
-                -->
-            </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.7</version>
-                        <executions>
-                            <execution>
-                                <id>compile</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <target>
-                                        <pathconvert property="plugins.jars" pathsep="${path.separator}">
-                                            <path refid="maven.runtime.classpath"/>
-                                            <map from="${project.build.directory}${file.separator}classes" to=""/>
-                                        </pathconvert>
-                                        <pathconvert pathsep=" " property="bundles">
-                                            <path path="${plugins.jars}"/>
-                                            <mapper>
-                                                <chainedmapper>
-                                                    <flattenmapper/>
-                                                    <globmapper from="*" to="file:modules/*" casesensitive="no"/>
-                                                </chainedmapper>
-                                            </mapper>
-                                        </pathconvert>
-                                        <propertyfile file="${project.build.directory}/config.properties">
-                                            <entry key="felix.auto.start" value="${bundles} file:modules/${project.build.finalName}.jar"/>
-                                            <entry key="org.osgi.framework.bootdelegation" value="*"/>
-                                        </propertyfile>
-                                        <copy file="${maven.dependency.org.apache.felix.org.apache.felix.main.jar.path}" tofile="${project.build.directory}/felix.jar"/>
-                                    </target>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-assembly-plugin</artifactId>
-                        <version>2.2.2</version>
-                        <executions>
-                            <execution>
-                                <id>create-executable-jar</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>single</goal>
-                                </goals>
-                                <configuration>
-                                    <descriptors>
-                                        <descriptor>${basedir}/src/main/assembly/felix.xml</descriptor>
-                                    </descriptors>
-                                    <finalName>${project.build.finalName}</finalName>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>run-on-felix</id>
-            <dependencies>
-                <dependency>
-                    <groupId>org.apache.felix</groupId>
-                    <artifactId>org.apache.felix.main</artifactId>
-                    <version>4.0.2</version>
-                    <scope>provided</scope>
-                </dependency>
-                <!-- org.apache.felix:org.apache.felix.gogo.shell:0.6.1 useless from Maven since stdin is swallowed -->
-            </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.7</version>
-                        <configuration>
-                            <target>
-                                <property name="vm.args" value=""/>
-                                <pathconvert property="plugins.jars" pathsep="${path.separator}">
-                                    <path refid="maven.runtime.classpath"/>
-                                    <map from="${project.build.directory}${file.separator}classes" to=""/>
-                                </pathconvert>
-                                <makeurl property="urls" separator=" ">
-                                    <path path="${plugins.jars}"/>
-                                    <path location="${project.build.directory}/${project.build.finalName}.jar"/>
-                                </makeurl>
-                                <propertyfile file="${project.build.directory}/run.properties">
-                                    <entry key="felix.auto.start" value="${urls}"/>
-                                    <entry key="felix.auto.deploy.action" value="uninstall,install,update,start"/>
-                                    <entry key="org.osgi.framework.storage" value="${project.build.directory}${file.separator}felix-cache"/>
-                                    <entry key="org.osgi.framework.bootdelegation" value="*"/>
-                                </propertyfile>
-                                <makeurl property="run.properties.url" file="${project.build.directory}/run.properties"/>
-                                <java fork="true" jar="${maven.dependency.org.apache.felix.org.apache.felix.main.jar.path}">
-                                    <sysproperty key="felix.config.properties" value="${run.properties.url}"/>
-                                    <jvmarg line="${vm.args}"/>
-                                </java>
-                            </target>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+    <modules>
+        <module>projectx-lib-parent</module>
+        <module>projectx-lib-javafx</module>
+    </modules>
 </project>
