--- a/drombler-commons-fx-time/pom.xml
+++ b/drombler-commons-fx-time/pom.xml
@@ -26,7 +26,7 @@ Contributor(s): .
     <artifactId>drombler-commons-fx-time</artifactId>
     <packaging>bundle</packaging>
 
-    <name>Drombler Commons - FX - Date &amp; Time</name>
+    <name>Drombler Commons - FX - Date and Time</name>
     <inceptionYear>2012</inceptionYear>
 
 <!-- Not inherited!?? -->
