--- a/drombler-commons-security-srp-server/pom.xml
+++ b/drombler-commons-security-srp-server/pom.xml
@@ -41,6 +41,12 @@ Contributor(s): .
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
             </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
