--- a/drombler-commons-fx-time/pom.xml
+++ b/drombler-commons-fx-time/pom.xml
@@ -19,9 +19,9 @@ Contributor(s): .
 
     <parent>
         <groupId>org.drombler.commons</groupId>
-        <artifactId>drombler-commons-parent</artifactId>
+        <artifactId>drombler-commons-fx-parent</artifactId>
         <version>0.1-SNAPSHOT</version>
-        <relativePath>../drombler-commons-parent</relativePath>
+        <relativePath>../drombler-commons-fx-parent</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-time</artifactId>
     <packaging>bundle</packaging>
@@ -39,10 +39,9 @@ Contributor(s): .
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
                 <extensions>true</extensions>
             </plugin>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.0</version>
@@ -68,7 +67,7 @@ Contributor(s): .
                         </plugin>
                     </reportPlugins>
                 </configuration>
-            </plugin>
+            </plugin>-->
 <!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-install-plugin</artifactId>
@@ -116,7 +115,6 @@ Contributor(s): .
         <dependency>
             <groupId>javafx</groupId>
             <artifactId>jfxrt</artifactId>
-
         </dependency>
         <dependency>
             <groupId>org.softsmithy.lib</groupId>
