--- a/drombler-commons-fx/pom.xml
+++ b/drombler-commons-fx/pom.xml
@@ -19,9 +19,9 @@ Contributor(s): .
 
     <parent>
         <groupId>org.drombler.commons</groupId>
-        <artifactId>drombler-commons-parent</artifactId>
+        <artifactId>drombler-commons-fx-parent</artifactId>
         <version>0.1-SNAPSHOT</version>
-        <relativePath>../drombler-commons-parent</relativePath>
+        <relativePath>../drombler-commons-fx-parent</relativePath>
     </parent>
     <artifactId>drombler-commons-fx</artifactId>
     <packaging>bundle</packaging>
@@ -42,14 +42,14 @@ Contributor(s): .
                 <extensions>true</extensions>
             </plugin>
 
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9</version>
                 <configuration>
                     <detectLinks>true</detectLinks>
                     <links>
-                        <!-- javadoc link for javax.persistence -->
+                         javadoc link for javax.persistence 
                         <link>http://docs.oracle.com/javaee/6/api/</link>
                     </links>
                     <groups>
@@ -59,7 +59,7 @@ Contributor(s): .
                         </group>
                     </groups>
                 </configuration>
-            </plugin>
+            </plugin>-->
             <!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
