- Maven Site fixes - Skin fixes - project fixes

--- a/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
+++ b/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
@@ -65,6 +65,14 @@
         <url>http://issues.mycompany.com/drombler-commons-fx-ensemble</url>
     </issueManagement>
     
+    <distributionManagement>
+        <site>
+            <id>drombler</id>
+            <name>Drombler Commons</name>
+            <url>file://drombler</url>
+        </site>
+    </distributionManagement>
+    
     <properties>
         <drombler-fx.version>0.1</drombler-fx.version>
     </properties>
