--- a/drombler-commons-security-srp-client/pom.xml
+++ b/drombler-commons-security-srp-client/pom.xml
@@ -48,6 +48,13 @@ Contributor(s): .
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
