--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
@@ -21,49 +21,15 @@
     <url>http://www.mycompany.com/drombler-commons-fx-ensemble</url>
     <inceptionYear>2012</inceptionYear>
     
-    <!-- Override the organization. 
-    Otherwise you would inherit the Drombler specific organization configuration, which wouldn't be correct.-->
-    <organization>
-        <name>My Company</name>
-        <url>http://www.mycompany.com</url>
-    </organization>
     
-    <!-- Override the project licenses. 
-    Otherwise you would inherit the Drombler specific licenses configuration, which wouldn't be correct.-->
     <licenses>
         <license>
-            <name>My License Name</name>
-            <url>../LICENSE.txt</url>
+            <name>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</name>
             <distribution>repo</distribution>
+            <!--<url>http://java.sun.com/spl.html</url>-->
+            <url>../../../LICENSE.txt</url>
         </license>
     </licenses>
-    
-    <!-- Override the project developers configuration. 
-    Otherwise you would inherit the Drombler specific developers configuration, which wouldn't be correct.-->
-    <developers>
-        <developer>
-            <id>someuser</id>
-            <name>Some Name</name>
-            <email>someuser@mycompany.com</email>
-            <url>http://www.mycompany.com/someuser</url>
-            <timezone>1</timezone>
-        </developer>
-    </developers>
-
-    <!-- Override the project scm configuration. 
-    Otherwise you would inherit the Drombler specific scm configuration, which wouldn't be correct.-->
-    <scm>
-        <connection>scm:hg:http://hg.mycompany.com/drombler-commons-fx-ensemble</connection>
-        <developerConnection>scm:hg:ssh://${username}@hg.mycompany.com/drombler-commons-fx-ensemble</developerConnection>
-        <url>http://hg.mycompany.com/drombler-commons-fx-ensemble</url>
-    </scm>
-    
-    <!-- Override the project issueManagement configuration. 
-    Otherwise you would inherit the Drombler specific issueManagement configuration, which wouldn't be correct.-->
-    <issueManagement>
-        <system>My System</system>
-        <url>http://issues.mycompany.com/drombler-commons-fx-ensemble</url>
-    </issueManagement>
     
     <distributionManagement>
         <site>
