- Renamed: FiniteProperty -> LimitedProperty - Renamed: FiniteComparableProperty -> LimitedComparableProperty

--- a/drombler-commons-fx/drombler-commons-fx-time/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-time/pom.xml
@@ -83,7 +83,7 @@ Contributor(s): .
     <dependencies>
         <dependency>
             <groupId>org.drombler.commons</groupId>
-            <artifactId>drombler-commons-fx</artifactId>
+            <artifactId>drombler-commons-fx-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
